--- a/src/xmp.1
+++ b/src/xmp.1
@@ -1,42 +1,30 @@
-.TH "XMP" "1" "Version 3\&.5\&.0" "Jan 2012" "Extended Module Player" 
+.TH "XMP" "1" "Version 3\&.9\&.0" "Apr 2012" "Extended Module Player" 
 .PP 
 .SH "NAME" 
 xmp - Extended Module Player
 .PP 
 .SH "SYNOPSIS" 
 \fBxmp\fP
-[\fB-8, --8bit\fP]
 [\fB-a, --amplify\fP \fIfactor\fP]
 [\fB-b, --bits\fP \fIbits\fP]
 [\fB-c, --stdout\fP]
 [\fB-D\fP \fIdevice-specific parameters\fP]
 [\fB-d, --driver\fP \fIdriver\fP]
 [\fB--fix-sample-loop\fP]
-[\fB-F, --click-filter\fP]
 [\fB-f, --frequency\fP \fIrate\fP]
 [\fB-h, --help\fP]
 [\fB-I, --instrument-path\fP]
-[\fB-i, --interpolate\fP]
-[\fB--load-only\fP]
+[\fB-i, --info\fP]
 [\fB-l, --loop\fP]
 [\fB-M, --mute\fP \fIchannel-list\fP]
 [\fB-m, --mono\fP]
 [\fB--nocmd\fP]
-[\fB--nofilter\fP]
-[\fB-n, --nearest\fP]
-[\fB--nopan\fP]
-[\fB--norc\fP]
 [\fB-o, --output-file\fP \fIfilename\fP]
 [\fB-P, --pan\fP \fIpan\fP]
 [\fB--probe-only\fP]
 [\fB-R --random\fP]
-[\fB--realtime\fP]
-[\fB-r --reverse\fP]
-[\fB--show-time\fP]
 [\fB-S, --solo\fP \fIchannel-list\fP]
 [\fB-s, --start\fP \fIpos\fP]
-[\fB--stereo\fP]
-[\fB-T, --tempo\fP \fIbpm\fP]
 [\fB-t, --time\fP \fItime\fP]
 [\fB-u, --unsigned\fP]
 [\fB-V, --version\fP]
@@ -54,14 +42,10 @@ Sound System sequencer, linear and ulaw PCM audio devices or mixing
 to a raw or WAV file\&.
 .PP 
 .SH "OPTIONS" 
-.IP "\fB-8, --8bit\fP" 
-Convert 16 bit samples to 8 bit\&. You may want to use this mode to
-save memory in the sound device (AWE cards will ignore this mode and
-always work with 16 bit samples)\&.
 .IP "\fB-a, --amplify\fP \fIfactor\fP" 
 Amplification factor for the software mixer\&. Valid amplification factors
-are 0 (normal), 1 (x2), 2 (x4) and 3 (x8)\&. Warning\&: amplification
-factors higher than 0 may cause distorted or noisy output\&.
+range from 0 to 3. Default is 1. \&. Warning\&: higher amplification
+factors may cause distorted or noisy output\&.
 .IP "\fB-b, --bits\fP \fIbits\fP" 
 Set the software mixer resolution (8 or 16 bits)\&. If ommited,
 The audio device will be opened at the highest resolution available\&.
@@ -77,20 +61,16 @@ probe each available driver\&.
 .IP "\fB--fix-sample-loop\fP" 
 Force sample loop start in samples instead of 16-bit words\&. This
 option affects only MOD files\&.
-.IP "\fB-F, --click-filter\fP" 
-Use the LPF filter to remove clicks from the software mixer output\&.
 .IP "\fB-f, --frequency\fP \fIrate\fP" 
 Set the software mixer sampling rate in hertz\&.
 .IP "\fB-h, --help\fP" 
 Show a short summary of command-line options\&.
 .IP "\fB-I, --instrument-path\fP \fIpath\fP" 
 Set the pathname to the directory containing external samples\&.
-.IP "\fB-i, --interpolate\fP" 
-Enable software mixer linear interpolation\&.
-.IP "\fB--load-only\fP" 
-Exit after loading the module\&.
+.IP "\fB-i, --info\fP" 
+Display module information and exit\&.
 .IP "\fB-l, --loop\fP" 
-Enable module looping and backward pattern jumps\&.
+Enable module looping\&.
 .IP "\fB-M, --mute\fP \fIchannel-list\fP" 
 Mute the specified channels\&. \fIchannel-list\fP is a comma-separated
 list of decimal channel ranges\&. Example: 0,2-4,8-16\&.
@@ -98,19 +78,6 @@ list of decimal channel ranges\&. Example: 0,2-4,8-16\&.
 Force mono output (default is stereo in stereo-capable devices)\&.
 .IP "\fB--nocmd\fP" 
 Disable interactive commands\&.
-.IP "\fB--nofilter\fP" 
-Disable IT filters\&. When using the software mixer, IT filters can
-significantly increase CPU usage on slow machines\&. In this case,
-disable filtering with this option\&.
-.IP "\fB-n, --nearest\fP" 
-Enable software mixer nearest neighbor interpolation\&.
-.IP "\fB--nopan\fP" 
-Disable dynamic panning\&. This option can be used to prevent
-clicking when playing in AWE32 cards\&. Module formats that rely only
-in dynamic pan setting to produce stereo output (e\&.g\&. XM) will use
-the MOD channel panning (LRRL)\&.
-.IP "\fB--norc\fP" 
-Don't read the configuration files\&.
 .IP "\fB-o, --output-file\fP \fIfilename\fP" 
 Set the output file name when mixing to raw or WAV files\&. If \'-\' is
 given as the file name, the output will be sent to stdout\&.
@@ -120,21 +87,11 @@ Set the percentual panning amplitude\&.
 Exit after probing the audio device\&.
 .IP "\fB-R, --random\fP" 
 Play modules in random order\&.
-.IP "\fB--realtime\fP" 
-Play modules in realtime priority (available for FreeBSD)\&.
-.IP "\fB-r, --reverse\fP" 
-Reverse the left/right stereo channels\&.
-.IP "\fB--show-time\fP" 
-Display elapsed and remaining time\&.
 .IP "\fB-S, --solo\fP \fIchannel-list\fP" 
 Play only the specified channels\&. \fIchannel-list\fP is a
 comma-separated list of decimal channel ranges\&. Example: 0,2-4,8-16\&.
 .IP "\fB-s, --start\fP \fIpos\fP" 
 Start playing the module from the position \fIpos\fP\&.
-.IP "\fB--stereo\fP" 
-Force stereo output\&.
-.IP "\fB-T, --tempo\fP \fIbpm\fP" 
-Set the initial tempo in beats per minute (default is 125)\&.
 .IP "\fB-t, --time\fP \fItime\fP" 
 Specifies the maximum playing time to \fItime\fP seconds\&.
 .IP "\fB-u, --unsigned\fP" 
@@ -183,22 +140,32 @@ Generate little-endian 16-bit samples (default is the machine byte ordering)\&.
 .PP
 .SH "INTERACTIVE COMMANDS" 
 The following single key commands can be used when playing modules:
-.IP "\fBq\fP" 
+.IP "\fBq, Esc\fP" 
 Stop the currently playing module and quit the player\&.
-.IP "\fBf\fP" 
+.IP "\fBf, Right\fP" 
 Jump to the next pattern\&.
-.IP "\fBb\fP" 
+.IP "\fBb, Left\fP" 
 Jump to the previous pattern\&.
-.IP "\fBn\fP" 
+.IP "\fBn, Up\fP" 
 Jump to the next module\&.
-.IP "\fBp\fP" 
+.IP "\fBp, Down\fP" 
 Jump to the previous module\&.
-.IP "\fBSPACE\fP" 
-Pause the module\&.
+.IP "\fBSpace\fP" 
+Pause or unpause module replay\&.
 .IP "\fB1\fP, \fB2\fP, \fB3\fP, \fB4\fP, \fB5\fP, \fB6\fP, \fB7\fP, \fB8\fP, \fB9\fP, \fB0\fP" 
 Mute/unmute channels 1 to 10\&.
 .IP "\fB!\fP" 
 Unmute all channels\&.
+.IP "\fB?\fP" 
+Display available commands\&.
+.IP "\fBm\fP" 
+Display module information\&.
+.IP "\fBi\fP" 
+Display combined instrument/sample list\&.
+.IP "\fBI\fP" 
+Display instrument list\&.
+.IP "\fBS\fP" 
+Display sample list\&.
 .PP 
 Interactive mode can be disabled using the \fB--nocmd\fP command
 line option\&.
@@ -218,9 +185,9 @@ Play modules in /dev/dsp using the default device settings (unsigned 8bit,
 \f(CWxmp -o/dev/dsp -f8000 -m -b8 -u module\&.lha\fP
 .PP 
 Play all XM modules in the /mod directory and all subdirectories in
-random order, ignoring any configuration set in the xmp\&.conf file\&:
+random order\&:
 .IP "" 
-\f(CWxmp --norc -R `find /mod -name "*\&.xm*" -print`\fP
+\f(CWxmp -R `find /mod -name "*\&.xm*" -print`\fP
 .PP 
 .SH "ENVIRONMENT" 
 .IP "\fBXMP_INSTRUMENT_PATH\fP" 
@@ -233,7 +200,5 @@ Overrides samples directory for the MED2 loader\&.
 \f(CW/etc/xmp/xmp\&.conf\&, $HOME/\&.xmp/xmp\&.conf\&, /etc/xmp/modules\&.conf\&, $HOME/\&.xmp/modules\&.conf\fP
 .PP 
 .SH "AUTHOR" 
-Claudio Matsuoka and Hipolito Carraro Jr. Portions of code
-used in xmp have been contributed by several other authors,
-see docs/CREDITS for the complete list.
+Claudio Matsuoka and Hipolito Carraro Jr\&.
 .PP 
