[xmp] Change endian control for file driver
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -133,9 +133,9 @@ is the internal speaker\&.
 Set the size in bytes of the audio buffer\&. The default value is 32 Kb\&.
 .PP 
 File output:
-.IP "\fB-D\fP \fIbig-endian\fP" 
+.IP "\fB-D\fP \fIendian=big\fP" 
 Generate big-endian 16-bit samples (default is the machine byte ordering)\&.
-.IP "\fB-D\fP \fIlittle-endian\fP" 
+.IP "\fB-D\fP \fIendian=little\fP" 
 Generate little-endian 16-bit samples (default is the machine byte ordering)\&.
 .PP
 .SH "INTERACTIVE COMMANDS" 
