--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 
 
 
+
                          ___  ___ ____________  
                          \  \/  //      ____  \ 
                           >    <|  Y Y  \ |_>  >
@@ -51,7 +52,8 @@ directly to cmatsuoka@gmail.com.
 
 LICENSE
 
-Extended Module Player (C) 1996-2012 Claudio Matsuoka and Hipolito Carraro Jr
+Extended Module Player
+Copyright (C) 1996-2012 Claudio Matsuoka and Hipolito Carraro Jr
 
 This program is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
