[xmp] Update man page
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -13,7 +13,7 @@ xmp - Extended Module Player
 [\fB-f, --frequency\fP \fIrate\fP]
 [\fB-h, --help\fP]
 [\fB-I, --instrument-path\fP]
-[\fB-i, --info\fP]
+[\fB--load-only\fP]
 [\fB-L, --list-formats\fP]
 [\fB-l, --loop\fP]
 [\fB-M, --mute\fP \fIchannel-list\fP]
@@ -63,8 +63,8 @@ Set the software mixer sampling rate in hertz\&.
 Show a short summary of command-line options\&.
 .IP "\fB-I, --instrument-path\fP \fIpath\fP" 
 Set the pathname to the directory containing external samples\&.
-.IP "\fB-i, --info\fP" 
-Display module information and exit\&.
+.IP "\fB--load-only\fP" 
+Load module and exit\&.
 .IP "\fB-l, --loop\fP" 
 Enable module looping\&.
 .IP "\fB-M, --mute\fP \fIchannel-list\fP" 
