[xmp] Update manpage
Add documentation for --reverse option.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -94,6 +94,8 @@ Set the percentual panning amplitude\&.
 Exit after probing the audio device\&.
 .IP "\fB-R, --random\fP" 
 Play modules in random order\&.
+.IP "\fB-r, --reverse\fP" 
+Reverse left/right stereo channels\&.
 .IP "\fB-S, --solo\fP \fIchannel-list\fP" 
 Play only the specified channels\&. \fIchannel-list\fP is a
 comma-separated list of decimal channel ranges\&. Example: 0,2-4,8-16\&.
