[xmp] Add option for vblank-based timing
Use the --vblank command-line option to force vblank-based timing instead
of CIA tempo setting. Needed by some modules such as Klisje paa klisje.
Needs new timing API.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -31,6 +31,7 @@ xmp - Extended Module Player
 [\fB-s, --start\fP \fIpos\fP]
 [\fB-t, --time\fP \fItime\fP]
 [\fB-u, --unsigned\fP]
+[\fB--vblank\fP]
 [\fB-V, --version\fP]
 [\fB-v, --verbose\fP]
 \fImodules\fP
@@ -106,6 +107,8 @@ Specifies the maximum playing time to \fItime\fP seconds\&.
 .IP "\fB-u, --unsigned\fP" 
 Tell the software mixer to use unsigned samples when mixing to
 a file (default is signed)\&.
+.IP "\fB--vblank\fP" 
+Force Amiga vblank-based timing (no CIA tempo setting)\&.
 .IP "\fB-V, --version\fP" 
 Print version information\&.
 .IP "\fB-v, --verbose\fP" 
