[xmp] Typo fix in documentation
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/INSTALL
+++ b/INSTALL
@@ -12,8 +12,8 @@ Requirements
   http://xmp.sf.net.
 
 
-Building libxmp
----------------
+Building xmp
+------------
 
 In most systems just execute:
 
