--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 Stable versions
 ---------------
 
+4.0.1 (20130216):
+	- fix license issues reported by Jan Engelhardt
+
 4.0.0 (20130213):
 	- rewrite player to use libxmp 4.0
