--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,12 @@
 Stable versions
 ---------------
 
+4.0.2 ():
+	-
+
 4.0.1 (20130216):
 	- fix license issues reported by Jan Engelhardt
+	- fix pulseaudio detection (by Emanuel Haupt)
 
 4.0.0 (20130213):
 	- rewrite player to use libxmp 4.0
