[xmp] Allow module configuration to override default module quirks
Libxmp 4.0.3 includes built-in module quirks for well-known cases. Allow
modules.conf to override these default settings.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,9 @@ Stable versions
 
 4.0.2 ():
 	- Fix data type in coreaudio driver
+	- Allow modules.conf to override default module quirks when
+	  using libxmp 4.0.3 or newer
+	- Don't rescan module if using libxmp 4.0.3 or newer
 
 	Changes by Jan Engelhardt:
 	- give Pulseaudio higher priority than ALSA
