Add option to play hidden sequences
Add command-line option -z to specify a pattern sequence to play. The
main sequence is 0.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -36,6 +36,7 @@ xmp - Extended Module Player
 [\fB--vblank\fP]
 [\fB-V, --version\fP]
 [\fB-v, --verbose\fP]
+[\fB-z, --sequence\fP]
 \fImodules\fP
 .PP 
 .SH "DESCRIPTION" 
@@ -123,6 +124,9 @@ Print version information\&.
 Verbose mode (incremental)\&. If specified more than once, the
 verbosity level will be increased (no messages will be displayed
 when the player runs in background)\&.
+.IP "\fB-z, --sequence\fP \fInum\fP" 
+Play hidden or alternative pattern sequence \fInum\fP\ (0 is the main
+sequence)\&.
 .PP 
 .SH "DEVICE DRIVER PARAMETERS" 
 Use the option \fB-D\fP to send parameters directly to the device
