--- a/src/xmp.1
+++ b/src/xmp.1
@@ -207,6 +207,10 @@ Display combined instrument/sample list\&.
 Display instrument list\&.
 .IP "\fBS\fP" 
 Display sample list\&.
+.IP "\fB<\fP" 
+Change to previous sequence (subsong)\&.
+.IP "\fB>\fP" 
+Change to next sequence (subsong)\&.
 .PP 
 Interactive mode can be disabled using the \fB--nocmd\fP command
 line option\&.
