Add option to play all sequences in module
Add option -Z to command-line interface to play all available sequences
(subsongs) in module.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -36,6 +36,7 @@ xmp - Extended Module Player
 [\fB--vblank\fP]
 [\fB-V, --version\fP]
 [\fB-v, --verbose\fP]
+[\fB-Z, --all-sequences\fP]
 [\fB-z, --sequence\fP]
 \fImodules\fP
 .PP 
@@ -124,6 +125,8 @@ Print version information\&.
 Verbose mode (incremental)\&. If specified more than once, the
 verbosity level will be increased (no messages will be displayed
 when the player runs in background)\&.
+.IP "\fB-Z, --all-sequences\fP" 
+Play all hidden or alternative pattern sequences (subsongs) in module\&.
 .IP "\fB-z, --sequence\fP \fInum\fP" 
 Play hidden or alternative pattern sequence \fInum\fP\ (0 is the main
 sequence)\&.
