--- a/src/xmp.1
+++ b/src/xmp.1
@@ -201,7 +201,9 @@ Unmute all channels\&.
 .IP "\fB?\fP" 
 Display available commands\&.
 .IP "\fBl\fP" 
-Toggle module looping\&.
+Toggle module/sequence looping\&.
+.IP "\fBz\fP" 
+Toggle subsong explorer mode\&.
 .IP "\fBm\fP" 
 Display module information\&.
 .IP "\fBi\fP" 
