--- a/Changelog
+++ b/Changelog
@@ -2,8 +2,14 @@ Stable versions
 ---------------
 
 4.0.3 ():
-	- Fix native-endian support in coreaudio driver (reported by
-	  Misty De Meo)
+	Bug reported by Misty De Meo:
+	- Fix native-endian support in coreaudio driver
+
+	Subsong explorer requested by Benjamin Shadwick:
+	- Add commands '<' and '>' to jump to previous/next sequence
+	- Add command 'z' to toggle the subsong explorer on/off
+	- Add option -z <num> to play a specified sequence
+	- Add option -Z to play all sequences in module
 
 4.0.2 (20130407):
 	- Fix data type in coreaudio driver
