Add command to show current sequence
Command 'Z' displays the current sequence in the status line.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -200,10 +200,12 @@ Mute/unmute channels 1 to 10\&.
 Unmute all channels\&.
 .IP "\fB?\fP" 
 Display available commands\&.
-.IP "\fBl\fP" 
-Toggle module/sequence looping\&.
+.IP "\fBZ\fP" 
+Display current sequence\&.
 .IP "\fBz\fP" 
 Toggle subsong explorer mode\&.
+.IP "\fBl\fP" 
+Toggle module/sequence looping\&.
 .IP "\fBm\fP" 
 Display module information\&.
 .IP "\fBi\fP" 
