--- a/README
+++ b/README
@@ -35,8 +35,9 @@ The following single key commands can be used during the playback:
           1 to 0      =>  mute/unmute channels 1 to 10
             !         =>  unmute all channels
             ?         =>  display available commands
-            l         =>  toggle loop mode
+            Z         =>  display current sequence
             z         =>  toggle subsong explorer mode
+            l         =>  toggle loop mode
             m         =>  display module information
             i         =>  display combined instrument/sample list
             I         =>  display instrument list
