--- a/src/xmp.1
+++ b/src/xmp.1
@@ -19,6 +19,7 @@ xmp - Extended Module Player
 [\fB--load-only\fP]
 [\fB-L, --list-formats\fP]
 [\fB-l, --loop\fP]
+[\fB--loop-all\fP]
 [\fB-M, --mute\fP \fIchannel-list\fP]
 [\fB-m, --mono\fP]
 [\fB-N, --null\fP]
@@ -85,6 +86,8 @@ Load module and exit\&.
 List supported module formats\&.
 .IP "\fB-l, --loop\fP" 
 Enable module looping\&.
+.IP "\fB--loop-all\fP" 
+Loop over the entire module list\&.
 .IP "\fB-M, --mute\fP \fIchannel-list\fP" 
 Mute the specified channels\&. \fIchannel-list\fP is a comma-separated
 list of decimal channel ranges\&. Example: 0,2-4,8-16\&.
