--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ Stable versions
 4.0.3 ():
 	- Fix native-endian coreaudio output (reported by Misty De Meo)
 	- Fix MinGW32 build (reported by vaseleos0)
+	- Fix Cygwin build (reported by Benjamin Shadwick)
 
 	New features requested by Benjamin Shadwick:
 	- Add commands '<' and '>' to jump to previous/next sequence
