--- a/Changelog
+++ b/Changelog
@@ -1,12 +1,13 @@
 Stable versions
 ---------------
 
-4.0.3 (20130420):
+4.0.3 (20130421):
 	- Fix native-endian coreaudio output (reported by Misty De Meo)
 	- Fix MinGW32 build (reported by vaseleos0)
 	- Fix Cygwin build (reported by Benjamin Shadwick)
-	- Fix module-specifc flag settings to override build-in quirks
-          (requires libxmp 4.1 or later)
+	- Fix module-specifc flags to override built-in quirks (requires
+	  libxmp 4.1 or later)
+	- Don't place configuration file in places like /usr/local/etc
 
 	New features requested by Benjamin Shadwick:
 	- Add commands '<' and '>' to jump to previous/next sequence
