--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 Stable versions
 ---------------
 
+4.0.5 ():
+	Changes by Jan Engelhardt:
+	- Change buildsystem to use automake
+
 4.0.4 (20130428):
 	- Fix executable suffix in MinGW32
 	- Fix frame info display in Windows (reported by vaseleos0)
