--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 Stable versions
 ---------------
 
+4.0.6 (20130519):
+	- Portability fixes to build with Visual C++
+
+	Changes by Jan Engelhardt:
+	- Do not error out when g++ is absent on non-BEOS
+
 4.0.5 (20130512):
 	- Fix loop when skipping to first file and it's not playable
 
