--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 Stable versions
 ---------------
 
+4.0.7 ():
+	- Fix NetBSD sound driver (by shattered)
+	- Fix 
+
 4.0.6 (20130519):
 	- Portability fixes to build with Visual C++
 
