--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,7 @@ Stable versions
 
 4.0.7 ():
 	- Fix NetBSD sound driver (by shattered)
-	- Fix 
+	- Minor cosmetic fixes
 
 4.0.6 (20130519):
 	- Portability fixes to build with Visual C++
