--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ Stable versions
 
 4.0.7 ():
 	- Fix NetBSD sound driver (by shattered)
+	- Fix Haiku sound driver
+	- Fix info message display time
 	- Minor cosmetic fixes
 
 4.0.6 (20130519):
