Add command M to display song message
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -1,4 +1,4 @@
-.TH "XMP" "1" "Version 4\&.0\&.7" "Jan 2014" "Extended Module Player" 
+.TH "XMP" "1" "Version 4\&.0\&.8" "Jun 2014" "Extended Module Player" 
 .PP 
 .SH "NAME" 
 xmp - Extended Module Player
@@ -209,6 +209,8 @@ Display current sequence\&.
 Toggle subsong explorer mode\&.
 .IP "\fBl\fP" 
 Toggle module/sequence looping\&.
+.IP "\fBM\fP" 
+Display message\&, if any\&.
 .IP "\fBm\fP" 
 Display module information\&.
 .IP "\fBi\fP" 
