--- a/src/xmp.1
+++ b/src/xmp.1
@@ -209,8 +209,6 @@ Display current sequence\&.
 Toggle subsong explorer mode\&.
 .IP "\fBl\fP" 
 Toggle module/sequence looping\&.
-.IP "\fBM\fP" 
-Display message\&, if any\&.
 .IP "\fBm\fP" 
 Display module information\&.
 .IP "\fBi\fP" 
@@ -219,6 +217,8 @@ Display combined instrument/sample list\&.
 Display instrument list\&.
 .IP "\fBS\fP" 
 Display sample list\&.
+.IP "\fBc\fP" 
+Display comment\&, if any\&.
 .IP "\fB<\fP" 
 Change to previous sequence (subsong)\&.
 .IP "\fB>\fP" 
