--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 Stable versions
 ---------------
 
+4.0.9:
+	- Add option '-p' to set the default pan amplitude
+
 4.0.8 (20140714):
 	- Add command 'c' to display module comment
 	- Add command-line option -C to display module comment
