--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ Stable versions
 
 4.0.9:
 	- Add option '-p' to set the default pan amplitude
+	- Add parameter 'default_pan' to configuration file
 
 4.0.8 (20140714):
 	- Add command 'c' to display module comment
