--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,11 @@
 Stable versions
 ---------------
 
-4.0.9:
+4.0.9 (20140926):
 	- Add option '-p' to set the default pan amplitude
 	- Add parameter 'default_pan' to configuration file
 	- Fix library detection when cross-compiling
-	- FIx Visual Studio 2013 build (by Stephen Leary)
+	- Fix Visual Studio 2013 build (by Stephen Leary)
 	- Default pan amplitude set to 50%
 
 4.0.8 (20140714):
