--- a/src/xmp.1
+++ b/src/xmp.1
@@ -1,4 +1,4 @@
-.TH "XMP" "1" "Version 4\&.0\&.9" "Ago 2014" "Extended Module Player" 
+.TH "XMP" "1" "Version 4\&.0\&.9" "Sep 2014" "Extended Module Player" 
 .PP 
 .SH "NAME" 
 xmp - Extended Module Player
