--- a/Changelog
+++ b/Changelog
@@ -2,7 +2,7 @@ Stable versions
 ---------------
 
 4.0.10 ():
-	- Update deprecated calls in CoreAudio driver
+	- Adjust CoreAudio driver latency
 
 4.0.9 (20140926):
 	- Add option '-p' to set the default pan amplitude
