Update documentation with h command
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.1
+++ b/src/xmp.1
@@ -212,7 +212,7 @@ Pause or unpause module replay\&.
 Mute/unmute channels 1 to 10\&.
 .IP "\fB!\fP" 
 Unmute all channels\&.
-.IP "\fB?\fP" 
+.IP "\fBh\fP, \fB?\fP" 
 Display available commands\&.
 .IP "\fBZ\fP" 
 Display current sequence\&.
