--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ Stable versions
 
 4.0.11 ():
 	- Mark surround channels in channel list
+	- Address errors reported by Coverity Scan
 
 4.0.10 (20141030):
 	- Add AIFF file output driver (by Lorence Lombardo)
