--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 Stable versions
 ---------------
 
+4.1.0 ():
+	- Add option to force tracker emulation (requires libxmp 4.4)
+	- Remove option --offset-bug-emulation
+
 4.0.11 (20160306):
 	- Mark surround channels in channel list
 	- Address errors reported by Coverity Scan
