--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ Stable versions
 	- Requires libxmp 4.4
 	- Add option to force tracker emulation
 	- Add option to enable classic sound mixers
+	- Fix default amplification factor
 	- Remove option --offset-bug-emulation
 
 4.0.11 (20160306):
