--- a/src/xmp.1
+++ b/src/xmp.1
@@ -120,6 +120,7 @@ Set the percentual panning amplitude\&.
 .IP "\fB\-P, \-\-default\-pan\fP \fInum\fP" 
 Set the percentual default pan setting for modules that don\'t set their
 own pan values\&. Useful to reduce LRRL pan separation on headphones\&.
+This parameter does not affect the Amiga 500 classic mixer\&.
 .IP "\fB\-\-probe\-only\fP" 
 Exit after probing the audio device\&.
 .IP "\fB\-R, \-\-random\fP" 
